@@ -1,5 +1,15 @@
 2005-04-23  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/Components.cpp:
+	* src/Components.h:
+	* src/Makefile.am:
+	* src/main.cpp:
+
+	Add dummy prompt service implementation which always returns
+	cancel.
+
+2005-04-23  Christian Persch  <chpe@cvs.gnome.org>
+
 	* data/prefs.js:
 
 	Disable formfill and password manager.
